tests/machine/x/pl/string_compare.out
ERROR: /workspace/mochi/tests/machine/x/pl/string_compare.pl:6:9: Syntax error: Operator expected

